# pki-research

./: README.md
certServ/alg_global/api_cert/: CMakeLists.txt  ref.c
certServ/alg_global/req/: genReq.sh  verify.sh
certServ/alg_global/req-b/: verify.sh
certServ/global/ca/: genCa.sh  (+1 more)
certServ/gmgm/: ca.cnf  client.c  gen_ca.sh  gen_demo.sh  gen_server.sh  gen_subca.sh  server.c  subca.cnf
chaos/: CMakeLists.txt  compile_commands.json
chaos/.cache/clangd/index/: cert_gen.c.E832964A90BBDF4E.idx  cert_gen.h.FB19E3138E8A8657.idx  cert_opt.cpp.C0BA4BDD49E66A07.idx  cert_opt.h.FDBFB0F3609162FE.idx  cert_req.c.76357B6FD0BE6996.idx  cert_req.h.7BD5978DFED1EE2B.idx  cipher.h.8E14132348C1CD4E.idx  cipher.hpp.288D7EED8E503719.idx  configbase.cpp.47CB5EFF4223F519.idx  configbase.h.87039750388E19D9.idx  easy_pem.cpp.D286CD53190E0B52.idx  easy_pem.h.BFC8B10788413EAF.idx  hardware_info.cpp.7C15450682F73BA8.idx  hardware_info.h.997692A36F3F204F.idx  json.hpp.91894AD925FA69B9.idx  keymgr.cpp.A03619A50849ED7D.idx  keymgr.h.5AAB28F779F81B04.idx  kvdb.h.6166AA2F9A45B008.idx  kvdb.hpp.B40C0B05F405864B.idx  log.h.FE54E6865ED962F0.idx  main.cpp.0D5CBE01E3807B1C.idx  main.cpp.22F824AA7BDD5E8B.idx  p12parse.cpp.03DB921B0215555B.idx  p12parse.h.C123F69129F3890A.idx  pkcs_tool.cpp.FB1FE30D4EC0F0CF.idx  reqgen.h.D89CFD1EA826E5C0.idx  rsa.cpp.B8EAE0E38849B71F.idx  rsa.h.22D068EA825AA35D.idx  sha256.hpp.587043CF4174BCC1.idx  utils.cpp.20AE2C1057FE9AE9.idx  utils.h.B9AD3FEA3F990BF2.idx
chaos/code/app/: main.cpp
chaos/code/cert/: cert_gen.c  cert_gen.h  cert_opt.cpp  cert_opt.h  cert_req.c  cert_req.h  cipher.hpp  easy_pem.cpp  easy_pem.h  keymgr.cpp  keymgr.h  kvdb.hpp  p12parse.cpp  p12parse.h  pkcs_tool.cpp  rsa.cpp  rsa.h  sha256.hpp
chaos/code/nlohmann/: json.hpp
chaos/code/utils/: configbase.cpp  configbase.h  garbo.h  hardware_info.cpp  hardware_info.h  store.h  timer.hpp  utils.cpp  utils.h
mac/: algorithm1.c  cmac.c
pkiASN/: CMakeLists.txt  log.h  main.c
pkiASN/easyme/: easyasn1.c  easyasn1.h
skillTraining/genKeyCert/: clear.sh  genCert.sh
tlsBench/: Makefile  certcli  certsvr  client.c  server.c
(+14 files in other folders)
